<?xml version="1.0" encoding="utf-8"?>

<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="main_menu_ads_and_trackers_blocked" tools:ignore="PluralsCandidate">"%1$d ads &amp; trackers blocked"</string>
    <string name="main_menu_ads_blocked_since">"Since %1$s"</string>

    <string name="main_menu_adblock">Hide annoying ads</string>

    <string name="main_menu_clear_data">Clear data</string>

    <string name="main_menu_translate">Translate</string>
    <string name="main_menu_translate_undo">Stop translate</string>

    <string name="main_menu_turn_on_night_mode">Turn on Night mode</string>
    <string name="main_menu_turn_off_night_mode">Turn off Night mode</string>

    <string name="main_menu_exit">Exit</string>
    <string name="main_menu_extensions">Extensions</string>

    <string name="menu_import_bookmarks">Import bookmarks</string>
    <string name="menu_export_bookmarks">Export bookmarks</string>

    <string name="appearance_preferences">Appearance</string>
    <string name="appearance_preferences_themes">Themes</string>

    <string name="accessibility_keep_toolbar_visible_title">Toolbar always on screen</string>
    <string name="accessibility_keep_toolbar_visible_summary">Keep toolbar always on screen while scrolling</string>

    <string name="accessibility_preferences_text_rewrap_title">Text rewrap / reflow</string>
    <string name="accessibility_preferences_text_rewrap_summary">Fit the text while zooming</string>

    <string name="accessibility_preferences_open_in_external_application_title">Enable external applications</string>
    <string name="accessibility_preferences_open_in_external_application_summary">Open links with external applications (Maps, YouTube, Vimeo) when possible</string>

    <string name="accessibility_preferences_nightmode_grayscale_title">Grayscale night mode</string>
    <string name="accessibility_preferences_nightmode_grayscale_summary">Prefer grayscale version of night mode</string>

    <string name="accessibility_preferences_night_scale">Night mode contrast (gray: 97, default: 99, black: 100)</string>

    <string name="accessibility_preferences_enable_bottom_toolbar_title">Bottom toolbar</string>
    <string name="accessibility_preferences_enable_bottom_toolbar_summary">Move address bar to the bottom</string>

    <string name="accessibility_preferences_enable_overscroll_button_title">Hand button (bottom toolbar only)</string>
    <string name="accessibility_preferences_enable_overscroll_button_summary">Add a hand button to reach the top of the screen</string>

    <string name="accessibility_preferences_enable_side_swipe_title">Edge swipe</string>
    <string name="accessibility_preferences_enable_side_swipe_summary">Enable swipe-left and swipe-right gestures on the edges of the page to navigate history</string>

    <string name="accessibility_preferences_enable_up_swipe_title">Swipe-up to open tab switcher</string>
    <string name="accessibility_preferences_enable_up_swipe_summary">Swipe-up on the toolbar to open the tab switcher</string>

    <string name="accessibility_preferences_show_extensions_first_title">Show extensions first</string>
    <string name="accessibility_preferences_show_extensions_first_summary">Show extensions higher in the main menu</string>

    <string name="contextual_menu_open_in_external_application">Open in external application</string>

    <string name="preferences_restart_is_needed">Your changes will take effect on restart of Mises</string>
    <string name="preferences_restart_now">RESTART NOW</string>
    <string name="preferences_restart_later">Later</string>

    <string name="preferences_translator">Translator</string>

    <string name="download_preferences_enable_external_download_manager_title">External download manager</string>
    <string name="download_preferences_enable_external_download_manager_summary">Use external download manager (ex: Advanced Download Manager)</string>

    <string name="privacy_preferences_accept_cookie_consent_title">Accept cookies</string>
    <string name="privacy_preferences_accept_cookie_consent_summary">Accept cookies when asked by a website</string>

    <string name="privacy_preferences_avoid_amp_websites_title">Remove AMP</string>
    <string name="privacy_preferences_avoid_amp_websites_summary">Prefer direct websites instead of AMP version</string>

    <string name="privacy_preferences_hide_incognito_window_content_title">Protect incognito windows</string>
    <string name="privacy_preferences_hide_incognito_window_content_summary">Hide content and prevent screenshots in incognito mode</string>

    <string name="privacy_preferences_close_tabs_on_exit_title">Close all tabs</string>
    <string name="privacy_preferences_close_tabs_on_exit_summary">Close all tabs between two browsing sessions</string>

    <string name="privacy_preferences_close_browser_after_last_tab_is_closed_title">Close browser when no tabs are open</string>
    <string name="privacy_preferences_close_browser_after_last_tab_is_closed_summary">Close the browser after the last tab has been closed</string>

    <string name="search_engines_preferences_howto_add">Recently visited\nTo add a new Search Engine, go to the Search Engine (ex: Bing.com) and make a Search. After few seconds, the Search Engine will be added to the list.</string>

    <string name="suggest_adblock">Click here to toggle ad and tracking protection</string>

    <string name="website_settings_add_site_description_ads">Allow displaying ads for a specific site</string>

    <string name="website_settings_desktop_mode">Desktop mode by default</string>
    <string name="website_settings_desktop_mode_enabled">Prefer desktop version of websites</string>
    <string name="website_settings_desktop_mode_disabled">Prefer mobile-optimized version of websites</string>

    <string name="main_menu_mobile_site">Mobile site</string>

    <string name="msg_notification_service_desc">The LCD(light client daemon) provides an access to the Mises Chain</string>
    <string name="title_foreground_service_notification_running">LCD is running</string>
    <string name="title_foreground_service_notification_error">LCD has error, auto-restart in a few minutes</string>
    <string name="lbl_btn_sticky_notification_open_app">Open Mises Browser</string>
    <string name="lbl_btn_sticky_notification_restart_lcd">Restart LCD service</string>
    <string name="lbl_create_mises_id">Create/Restore</string>
    <string name="lbl_my_data">My Data</string>
    <string name="lbl_mises_discover">Mises Discover</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_portal">Staking Portal</string>
    <string name="lbl_nft">NFT</string>
    <string name="lbl_input_content">Please enter the contents&#8230;</string>
    <string name="lbl_login">Log in</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_login_tip">Go to login Mises ID</string>
    <string name="lbl_auth_tip">Authorization expires,please reauthorization</string>
    <string name="lbl_can_not_share_tip">This page can\'t share</string>
    <string name="lbl_default_browser_tip">Make Mises your default browser</string>
    <string name="lbl_view_office_site">View Official Website</string>
    <string name="lbl_invite">Invite</string>
    <string name="lbl_id_copied_tip">Your Mises ID has been copied</string>
    <string name="lbl_update_download_complete_tip">An update has just been downloaded, install now?</string>
</resources>

