<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2014 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <org.chromium.chrome.browser.preferences.TextScalePreference
        android:key="text_scale"
        android:title="@string/font_size"
        android:selectable="false" />

    <org.chromium.chrome.browser.preferences.SeekBarLinkedCheckBoxPreference
        android:key="force_enable_zoom"
        android:summary="@string/force_enable_zoom_summary"
        android:title="@string/force_enable_zoom_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="text_rewrap"
        android:summary="@string/accessibility_preferences_text_rewrap_summary"
        android:title="@string/accessibility_preferences_text_rewrap_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="reader_for_accessibility"
        android:summary="@string/reader_for_accessibility_summary"
        android:title="@string/reader_for_accessibility_title" />

    <org.chromium.chrome.browser.preferences.NightScalePreference
        android:key="night_scale"
        android:title="@string/accessibility_preferences_night_scale"
        android:selectable="false" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="nightmode_grayscale"
        android:summary="@string/accessibility_preferences_nightmode_grayscale_summary"
        android:title="@string/accessibility_preferences_nightmode_grayscale_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="open_in_external_app"
        android:summary="@string/accessibility_preferences_open_in_external_application_summary"
        android:title="@string/accessibility_preferences_open_in_external_application_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="enable_bottom_toolbar"
        android:summary="@string/accessibility_preferences_enable_bottom_toolbar_summary"
        android:title="@string/accessibility_preferences_enable_bottom_toolbar_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="enable_overscroll_button"
        android:summary="@string/accessibility_preferences_enable_overscroll_button_summary"
        android:title="@string/accessibility_preferences_enable_overscroll_button_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="side_swipe_mode_enabled"
        android:summary="@string/accessibility_preferences_enable_side_swipe_summary"
        android:title="@string/accessibility_preferences_enable_side_swipe_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="up_swipe_mode_enabled"
        android:summary="@string/accessibility_preferences_enable_up_swipe_summary"
        android:title="@string/accessibility_preferences_enable_up_swipe_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="show_extensions_first"
        android:summary="@string/accessibility_preferences_show_extensions_first_summary"
        android:title="@string/accessibility_preferences_show_extensions_first_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="accessibility_tab_switcher"
        android:summary="@string/accessibility_tab_switcher_summary"
        android:title="@string/accessibility_tab_switcher_title" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="desktop_mode"
        android:summary="@string/website_settings_desktop_mode_enabled"
        android:title="@string/website_settings_desktop_mode" />

    <org.chromium.chrome.browser.preferences.ChromeBaseCheckBoxPreference
        android:key="keep_toolbar_visible"
        android:summary="@string/accessibility_keep_toolbar_visible_summary"
        android:title="@string/accessibility_keep_toolbar_visible_title" />

</PreferenceScreen>
