<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2000000">

    <LinearLayout
        android:id="@+id/view_login"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_login"
            android:textColor="#ff333333"
            android:textSize="20sp"
            android:drawableStart="@mipmap/head"
            android:drawablePadding="15dp"
            android:paddingStart="25dp"
            android:paddingTop="16dp"
            android:paddingBottom="30dp"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="#ffeeeeee"/>

        <TextView
            android:id="@+id/tv_create_mises"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_create_mises_id"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_mises_create"
            android:drawablePadding="15dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="#ffeeeeee" />

        <TextView
            android:id="@+id/tv_restore_mises"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_restore_mises_id"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_mises_restore"
            android:drawablePadding="15dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="#ffeeeeee" />

        <TextView
            android:id="@+id/tv_import_mises"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_import_metamask_mnemonics"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_mises_restore"
            android:drawablePadding="15dp"
            android:paddingStart="25dp"
            android:visibility="invisible"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="#ffeeeeee"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_user_info"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/head"
                android:contentDescription="@null"
                android:layout_marginStart="25dp"/>
            <ImageButton
                android:id="@+id/btn_switch"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@mipmap/ic_switch"
                android:layout_marginStart="170dp"
                android:contentDescription="@null"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="15dp"
            android:paddingStart="25dp"
            android:textColor="#ff333333"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:layout_marginTop="12dp"
            android:paddingStart="25dp"
            android:textColor="#ff666666"
            android:textSize="14sp"
            android:singleLine="true"
            android:ellipsize="middle"
            android:paddingEnd="25dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_marginTop="30dp"
            android:background="#ffeeeeee" />

        <TextView
            android:id="@+id/tv_my_data"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_my_data"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_mydata"
            android:drawablePadding="18dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:background="#ffeeeeee" />

        <TextView
            android:id="@+id/tv_mises_discover"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_mises_discover"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_discover"
            android:drawablePadding="18dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tv_wallet"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_wallet"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_wallet"
            android:drawablePadding="18dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/tv_nft"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="start|center_vertical"
            android:text="@string/lbl_nft"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:drawableStart="@mipmap/ic_nft"
            android:drawablePadding="18dp"
            android:paddingStart="25dp"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

</FrameLayout>